--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
 
             <div class="inputBox">
-                <button type="Send">Submit</button>
+                <button type="submit">Send</button>
             </div>
         </form>
     </div>
